# spec-kit-plus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT-HANDBOOK.md  README.md  pyproject.toml  spec-driven.md  项目技术文档.md
.devcontainer/: post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.tours/: rca-investigator-map-scan-build.tour
docs/: constitution-profiles.md  docfx.json  index.md  installation.md  local-development.md  project-cognition-compatibility-inventory.md  quickstart.md  upgrade.md
extensions/: EXTENSION-API-REFERENCE.md  EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-PUBLISHING-GUIDE.md  EXTENSION-USER-GUIDE.md  README.md  catalog.community.json  catalog.json
extensions/agent-teams/engine/: Cargo.toml  package-lock.json  package.json
extensions/agent-teams/engine/docs/: codex-native-hooks.md
extensions/agent-teams/engine/docs/reference/: project-wiki.md
extensions/agent-teams/engine/skills/worker/: SKILL.md
extensions/agent-teams/engine/src/adapt/: paths.ts
extensions/agent-teams/engine/src/agents/__tests__/: native-config.test.ts
extensions/agent-teams/engine/src/cli/: bridge.js  cleanup.js  doctor.ts  explore.ts  setup.ts
extensions/agent-teams/engine/src/cli/__tests__/: agents-init.test.ts  doctor-warning-copy.test.ts  packaged-explore-harness-lock.ts  setup-agents-overwrite.test.ts  setup-prompts-overwrite.test.ts  setup-refresh.test.ts  setup-scope.test.ts  setup-skill-validation.test.ts  setup-skills-overwrite.test.ts
extensions/agent-teams/engine/src/config/: codex-hooks.ts  generator.ts  mcp-registry.ts  models.ts
extensions/agent-teams/engine/src/config/__tests__/: codex-hooks.test.ts  generator-idempotent.test.ts  generator-notify.test.ts  mcp-registry.test.ts  models.test.ts  wiki-config-contract.test.ts
extensions/agent-teams/engine/src/hooks/: keyword-detector.ts  session.ts  shared-hook-client.ts  specify-quality-adapter.ts  triage-heuristic.ts
extensions/agent-teams/engine/src/hooks/__tests__/: shared-hook-client.test.ts  specify-quality-adapter.test.ts  wiki-docs-contract.test.ts
extensions/agent-teams/engine/src/hud/: index.ts  reconcile.ts  render.ts  state.ts  tmux.ts
extensions/agent-teams/engine/src/hud/__tests__/: hud-tmux-injection.test.ts  reconcile.test.ts  render.test.ts
extensions/agent-teams/engine/src/mcp/: bootstrap.ts  memory-server.ts  state-paths.ts  trace-server.ts
extensions/agent-teams/engine/src/mcp/__tests__/: state-paths.test.ts
extensions/agent-teams/engine/src/notifications/: index.ts  tmux-detector.ts  tmux.ts
extensions/agent-teams/engine/src/notifications/__tests__/: tmux-sanitize.test.ts
extensions/agent-teams/engine/src/runtime/: bridge.ts
extensions/agent-teams/engine/src/scripts/: codex-native-hook.ts  codex-native-pre-post.ts  notify-hook.ts
extensions/agent-teams/engine/src/scripts/__tests__/: codex-native-hook.test.ts
extensions/agent-teams/engine/src/scripts/native-hook/: context.ts  dispatcher.ts  effects.ts  outcome.ts  services.ts  session-start.ts  stop.ts  tool-use.ts  user-prompt.ts
extensions/agent-teams/engine/src/scripts/native-hook/__tests__/: context.test.ts  effects.test.ts  outcome.test.ts  services.test.ts  tool-use.test.ts
extensions/agent-teams/engine/src/scripts/notify-hook/: auto-nudge.ts  managed-tmux.ts  ralph-session-resume.ts  state-io.ts  team-dispatch.ts  team-leader-nudge.ts  team-worker.ts  tmux-injection.ts
extensions/agent-teams/engine/src/scripts/notify-hook/__tests__/: session-envs.test.ts  team-leader-nudge-specify.test.ts  team-worker-specify-env.test.ts
extensions/agent-teams/engine/src/state/: skill-active.ts
extensions/agent-teams/engine/src/state/__tests__/: operations.test.ts  skill-active.test.ts
extensions/agent-teams/engine/src/subagents/: tracker.ts
extensions/agent-teams/engine/src/team/: api-interop.ts  current-task-baseline.ts  followup-planner.ts  leader-activity.ts  runtime-cli.ts  runtime.ts  scaling.ts  state-root.ts  state.ts  tmux-session.ts  worker-bootstrap.ts  worktree.ts
extensions/agent-teams/engine/src/team/__tests__/: api-interop-specify-contract.test.ts  api-interop.test.ts  empty-cherry-pick.test.ts  followup-planner.test.ts  runtime-cli-specify-contract.test.ts  runtime-cli.test.ts  runtime-session-prefix-source.test.ts  runtime-specify-source-contract.test.ts  runtime.test.ts  scaling-specify-contract.test.ts  scaling.test.ts  state-root.test.ts  state-specify-contract.test.ts  state.test.ts  tmux-session-control-specify.test.ts  tmux-session-prefix-contract.test.ts  tmux-session-specify-env.test.ts  tmux-session.test.ts  worker-bootstrap.test.ts  worker-runtime-identity.test.ts
extensions/agent-teams/engine/src/utils/: paths.ts  platform-command.ts
extensions/agent-teams/engine/src/utils/__tests__/: agents-model-table.test.ts  paths.test.ts  platform-command.test.ts
extensions/agent-teams/engine/src/wiki/: lifecycle.ts  storage.ts
extensions/agent-teams/engine/src/wiki/__tests__/: storage.test.ts
extensions/agent-teams/engine/templates/: AGENTS.md
extensions/agent-teams/engine/tests/: bridge.test.mjs
plans/: 2026-04-24-ai-agent-lifecycle-adoption-blueprint.md
presets/: ARCHITECTURE.md  PUBLISHING.md  catalog.community.json  catalog.json
scripts/: sync-ecc-to-codex.sh
templates/: agent-file-template.md  agent-phase-transition-schema.json  agent-phase-transition-template.json  alignment-template.md  brainstorming-complexity-template.json  brainstorming-domains-template.json  brainstorming-evidence-index-template.json  brainstorming-evidence-record-template.json  brainstorming-facts-template.json  brainstorming-handoff-specify-template.json  brainstorming-intent-template.json  brainstorming-route-template.json  brainstorming-stage-manifest-template.json  checklist-template.md  constitution-template.md  context-template.md  debug.md  design-brief-template.md  design-preview-template.html  design-template.md  discussion-handoff-schema.json  discussion-handoff-template.json  (+35 more)
(+1628 files in other folders)
