[project]
name = "specify-cli"
version = "0.5.15"
description = "Specify CLI for Spec Kit Plus. A tool to bootstrap projects for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "click>=8.3.3",
    "rich",
    "platformdirs",
    "readchar",
    "pyyaml>=6.0.3",
    "packaging>=26.2",
    "pathspec>=1.1.1",
    "json5>=0.14.0",
    "pydantic-ai",
    "pydantic-graph<2",
]

[project.scripts]
specify = "specify_cli:main"
specify-teams-mcp = "specify_cli.mcp.teams_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle core assets so `specify init` works without network access (air-gapped / enterprise)
# Page templates (exclude commands/ — bundled separately below to avoid duplication)
"templates/agent-file-template.md" = "specify_cli/core_pack/templates/agent-file-template.md"
"templates/alignment-template.md" = "specify_cli/core_pack/templates/alignment-template.md"
"templates/brainstorming-complexity-template.json" = "specify_cli/core_pack/templates/brainstorming-complexity-template.json"
"templates/brainstorming-domains-template.json" = "specify_cli/core_pack/templates/brainstorming-domains-template.json"
"templates/brainstorming-evidence-index-template.json" = "specify_cli/core_pack/templates/brainstorming-evidence-index-template.json"
"templates/brainstorming-evidence-record-template.json" = "specify_cli/core_pack/templates/brainstorming-evidence-record-template.json"
"templates/brainstorming-facts-template.json" = "specify_cli/core_pack/templates/brainstorming-facts-template.json"
"templates/brainstorming-handoff-specify-template.json" = "specify_cli/core_pack/templates/brainstorming-handoff-specify-template.json"
"templates/brainstorming-intent-template.json" = "specify_cli/core_pack/templates/brainstorming-intent-template.json"
"templates/brainstorming-route-template.json" = "specify_cli/core_pack/templates/brainstorming-route-template.json"
"templates/brainstorming-stage-manifest-template.json" = "specify_cli/core_pack/templates/brainstorming-stage-manifest-template.json"
"templates/checklist-template.md" = "specify_cli/core_pack/templates/checklist-template.md"
"templates/constitution" = "specify_cli/core_pack/templates/constitution"
"templates/constitution-template.md" = "specify_cli/core_pack/templates/constitution-template.md"
"templates/context-template.md" = "specify_cli/core_pack/templates/context-template.md"
"templates/debug.md" = "specify_cli/core_pack/templates/debug.md"
"templates/discussion-state-template.md" = "specify_cli/core_pack/templates/discussion-state-template.md"
"templates/implement-execution-state-template.json" = "specify_cli/core_pack/templates/implement-execution-state-template.json"
"templates/plan-contract-template.json" = "specify_cli/core_pack/templates/plan-contract-template.json"
"templates/plan-template.md" = "specify_cli/core_pack/templates/plan-template.md"
"templates/project-handbook-template.md" = "specify_cli/core_pack/templates/project-handbook-template.md"
"templates/project-learning-detail-template.md" = "specify_cli/core_pack/templates/project-learning-detail-template.md"
"templates/project-learnings-index-template.md" = "specify_cli/core_pack/templates/project-learnings-index-template.md"
"templates/project-learnings-template.md" = "specify_cli/core_pack/templates/project-learnings-template.md"
"templates/project-rules-template.md" = "specify_cli/core_pack/templates/project-rules-template.md"
"templates/research-template.md" = "specify_cli/core_pack/templates/research-template.md"
"templates/references-template.md" = "specify_cli/core_pack/templates/references-template.md"
"templates/specify-draft-template.md" = "specify_cli/core_pack/templates/specify-draft-template.md"
"templates/spec-template.md" = "specify_cli/core_pack/templates/spec-template.md"
"templates/tasks-template.md" = "specify_cli/core_pack/templates/tasks-template.md"
"templates/task-index-template.json" = "specify_cli/core_pack/templates/task-index-template.json"
"templates/task-packet-template.json" = "specify_cli/core_pack/templates/task-packet-template.json"
"templates/workflow-state-template.md" = "specify_cli/core_pack/templates/workflow-state-template.md"
"templates/vscode-settings.json" = "specify_cli/core_pack/templates/vscode-settings.json"
# Command templates
"templates/command-partials" = "specify_cli/core_pack/command-partials"
"templates/commands" = "specify_cli/core_pack/commands"
"templates/examples" = "specify_cli/core_pack/templates/examples"
"templates/passive-skills" = "specify_cli/core_pack/passive-skills"
"templates/prd" = "specify_cli/core_pack/templates/prd"
"templates/worker-prompts" = "specify_cli/core_pack/worker-prompts"
"src/specify_cli/shared_hooks" = "specify_cli/core_pack/shared_hooks"
"scripts/bash" = "specify_cli/core_pack/scripts/bash"
"scripts/powershell" = "specify_cli/core_pack/scripts/powershell"
"scripts/shared" = "specify_cli/core_pack/scripts/shared"
"tools/project-cognition" = "specify_cli/core_pack/tools/project-cognition"
"extensions/agent-teams/engine/Cargo.toml" = "specify_cli/core_pack/extensions/agent-teams/engine/Cargo.toml"
"extensions/agent-teams/engine/Cargo.lock" = "specify_cli/core_pack/extensions/agent-teams/engine/Cargo.lock"
"extensions/agent-teams/engine/package.json" = "specify_cli/core_pack/extensions/agent-teams/engine/package.json"
"extensions/agent-teams/engine/package-lock.json" = "specify_cli/core_pack/extensions/agent-teams/engine/package-lock.json"
"extensions/agent-teams/engine/tsconfig.json" = "specify_cli/core_pack/extensions/agent-teams/engine/tsconfig.json"
"extensions/agent-teams/engine/src" = "specify_cli/core_pack/extensions/agent-teams/engine/src"
"extensions/agent-teams/engine/crates" = "specify_cli/core_pack/extensions/agent-teams/engine/crates"
"extensions/agent-teams/engine/prompts" = "specify_cli/core_pack/extensions/agent-teams/engine/prompts"
"extensions/agent-teams/engine/skills" = "specify_cli/core_pack/extensions/agent-teams/engine/skills"

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.27.1,<2",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
